Finish footer style, refactor

--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -5,7 +5,7 @@
 $font-sans: 'Source Sans Pro', $helvetica;
 $font-serif: 'Source Serif Pro', $georgia;
 $font-mono: 'Source Code Pro', $monospace;
-$font-italic: 'Playfair Display', serif;
+$font-serif-2: 'Playfair Display', serif;
 
 $font-weight-light: 300;
 $font-weight-normal: 400;
