--- a/_sass/prototyping/_front-page.scss
+++ b/_sass/prototyping/_front-page.scss
@@ -21,7 +21,7 @@
   &__title {
     color: palette(mono, 90);
     font-size: 2rem;
-    font-weight: $font-weight-normal;
+    font-weight: $font-weight-light;
     line-height: 1;
     margin-bottom: .3em;
 
@@ -338,7 +338,7 @@
 
       em {
         font-size: 1.25rem;
-        font-weight: $font-weight-normal;
+        font-weight: $font-weight-light;
         text-transform: capitalize;
       }
     }
