--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="{{ "assets/css/styles.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="{{ "assets/css/prototyping.css" | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-	<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700|Source+Sans+Pro:400,400i,600,600i,900,900i|Source+Code+Pro:400,600,900|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700|Source+Sans+Pro:300,600,900|Source+Code+Pro:400|Playfair+Display:400,400i,700,700i,900,900i" rel="stylesheet">
 
 	<script src="{{ "assets/js/modernizr.js" | prepend: site.baseurl }}"></script>
 </head>
