--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -15,7 +15,7 @@ select,
 textarea {
   color: $color-text;
   font-family: $font-sans;
-  font-weight: $font-weight-light;
+  font-weight: $font-weight-normal;
   line-height: $line-height;
 }
 
