--- a/_sass/component/_buttons.scss
+++ b/_sass/component/_buttons.scss
@@ -49,7 +49,7 @@ $button-padding: .75em 2em;
     }
     @include touch-hover() {
       background-color: transparent;
-      color: palette(brand, teal);
+      color: palette(mono, black);
       &:before {
         @include transform(translate3d(0,100%,0) rotate(-6deg));
       }
